Cambio de respuesta del endpoint measurementSave
La respuesta ahora ademas de incluir la instancia measurement almacenada, se incluye el tipo de evento predictivo y su valor de probabilidad
