# backend/src/main/resources/api-docs.yml
@@ -13,10 +13,16 @@ paths:
             schema:
               $ref: '#/components/schemas/Measurement'
       responses:
-        '201':
-          description: Medición registrada exitosamente.
+        '200':
+          description: Medición registrada exitosamente con predicción.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MeasurementWithPrediction'
         '400':
           description: Datos de medición inválidos.
+        '500':
+          description: Error interno del servidor.
     get:
       summary: Obtener datos de sensores
       parameters:
@@ -285,3 +291,13 @@ components:
           type: number
         recommendedAction:
           type: string
+    MeasurementWithPrediction:
+      type: object
+      properties:
+        measurement:
+          $ref: '#/components/schemas/Measurement'
+        predictiveEventType:
+          type: string
+        probability:
+          type: number
+          format: double
